# btree-implementation-binary-file

./: CMakeLists.txt  README.md  arvore_utils.c  arvore_utils.h  cabecalho_dados.c  cabecalho_dados.h  cabecalho_indices.c  cabecalho_indices.h  file.c  file.h  lote.c  lote.h  main.c  menu.c  menu.h  produto.h  produto_atualizacao.c  produto_atualizacao.h  produto_impressao.c  produto_impressao.h  produto_insercao.c  produto_insercao.h  produto_remocao.c  produto_remocao.h
atualizacao/: produto_atualizacao.c  produto_atualizacao.h
cabecalho/: cabecalho_dados.c  cabecalho_dados.h  cabecalho_indices.c  cabecalho_indices.h
file/: file.c  file.h
impressao/: produto_impressao.c  produto_impressao.h
insercao/: produto_insercao.c  produto_insercao.h
lote/: lote.c  lote.h
menu/: menu.c  menu.h
produto/: produto.h
remocao/: produto_remocao.c  produto_remocao.h
utils/: arvore_utils.c  arvore_utils.h  curso.c  distribuicao.c  distribuicao.h  exemplo_rem.c  exemploe_rem.c  exemploe_rem.txt  exemploooremocao.c  mainB.c  outroexeremocao.txt  remocao.c
